<?xml version="1.0"?>
<package>
  <name>rb1_arm_control</name>
  <version>0.0.0</version>
  <description>The rb1_arm_control package</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rb1_arm_description</build_depend>
  <build_depend>rb1_arm_joystick</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <run_depend>rb1_arm_description</run_depend>
  <run_depend>rb1_arm_joystick</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
