<?xml version="1.0"?>
<package>
  <name>rb1_gazebo</name>
  <version>0.0.0</version>
  <description>The rb1_gazebo package</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rb1_gazebo</url> -->

  <author email="info@robotnik.es">Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rb1_arm_control</build_depend>
  <build_depend>rb1_arm_description</build_depend>
  <build_depend>rb1_arm_joystick</build_depend>
  <build_depend>rb1_base_control</build_depend>
  <build_depend>rb1_base_description</build_depend>
  <build_depend>rb1_base_pad</build_depend>
  <build_depend>rb1_description</build_depend>
  <build_depend>rb1_torso_control</build_depend>
  <build_depend>rb1_torso_description</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rb1_arm_control</run_depend>
  <run_depend>rb1_arm_description</run_depend>
  <run_depend>rb1_arm_joystick</run_depend>
  <run_depend>rb1_base_control</run_depend>
  <run_depend>rb1_base_description</run_depend>
  <run_depend>rb1_base_pad</run_depend>
  <run_depend>rb1_description</run_depend>
  <run_depend>rb1_torso_control</run_depend>
  <run_depend>rb1_torso_description</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
